--- a/unionpay/settings.json
+++ b/unionpay/settings.json
@@ -1,7 +1,7 @@
 {
     "UnionPay":{
         "encrypt": {
-            "certPath": "",
+            "certPath": "/etc/unionpay/encrypt.cer",
             "CVN2": 0,
             "Exp": 0,
             "PAN": 0
@@ -11,7 +11,7 @@
             "password": "000000"
         },
         "verify": {
-            "certPath": ""
+            "certPath": "/etc/unionpay/verify_sign_acp.cer"
         },
         "url": {
             "frontEndRequest": "https://101.231.204.80:5000/gateway/api/frontTransReq.do",
